tests/runner-tests/stmt/syntax_errors/2.c
// compile-fail
// https://github.com/jyn514/rcc/issues/211
int main() {
	if (1) {} else else
}
